--- a/Style/index_style.css
+++ b/Style/index_style.css
@@ -55,7 +55,7 @@ div.Menu {
 	float: left;
 	width: 250px;
 	height: 100%;
-	background-color: #80bfff;
+	background-color: #538cc6;
 	color: white;
 	margin: 0px;
 	padding: 0px;
