--- a/Style/login_style.css
+++ b/Style/login_style.css
@@ -35,7 +35,7 @@ input.Text {
 }
 
 input.Text:hover {
-	border: 2px solid #009900;
+	border: 2px solid #4ED50D;
 }
 
 
@@ -57,7 +57,7 @@ input.Button {
 
 input.Button:hover  {
 	border : none !important;
-    background-color: #009900;
+    background-color: #4ED50D;
 }
 
 a:link {
@@ -66,7 +66,7 @@ a:link {
 }
 
 a:hover {
-	color : #009900!important;
+	color : #4ED50D!important;
 	text-decoration : none; 
 }
 
