--- a/Style/signup_style.css
+++ b/Style/signup_style.css
@@ -60,6 +60,21 @@ input.Button:hover  {
     background-color: #4ED50D;
 }
 
+input.Button2 {
+	border: 1px solid #bfbfbf;
+    background-color:white;
+    color: #bfbfbf;
+    width: 100px;
+    height: 35px;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;     
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;          	
+}
+
+input.Button2:hover {
+    background-color: #e6e6e6;
+}
 a:link {
 	color: #538cc6;
 	text-decoration: none;
