--- a/Style/comment_style.css
+++ b/Style/comment_style.css
@@ -1,61 +1,216 @@
-div#Background {
-	height: 100%;
-	width: 100%;
-	clear both;
-}
-
 div#Main {
 	/*border: 1px solid black;*/
-	height: 100%;
-	margin-left: 20%;
-	margin-right: 20%;
-	clear: both;
-	background-color: #f2f2f2;
-}
-
-div#Movie_Info {
-	/*border: 1px solid black;*/
 	width: 100%;
+	
+	margin: 0;
+	clear: both;
 	overflow: hidden;
+}
+div#SideBar {
+	/*border: 1px solid black;*/
+	width: 20%;
+	height: 100%;
+	float: left;
 	background-color: #538cc6;
+	margin: 0;
+	padding: 0;
 }
 
-div#Movie_Cover {
+div#Content {
 	/*border: 1px solid black;*/
+
 	float: left;
-}
-
-div#Movie_Overview {
-	/*border: 1px solid black;*/
-	float: left;
-}
-
-table#Movie_Table th, td {
-	font-size: 200%;
-	padding: 13;
-	color: white;
-}
-
-table#Movie_Table th, td:first-of-type {
-	text-align: right;
-}
-
-div#Comment {
-	/*border: 1px solid black;*/
-	margin: 50px;
-}
-
-div#Rent {
 	padding: 10px;
-	width: auto;
-	height: 45px;
-	background-color: white;
 }
 
-input#Rent_Button {
-	width: 100px;
-	height: 40px;
-	background-color: #538cc6;
+
+div.Greeting {
+	/*border: 1px solid red;*/
 	color: white;
+	align: right;
+}
+
+div.Greeting table{
+
+	width: 100%;
+	text-align: center;
+	padding: 10px;
+}
+div.Greeting td{
+
+	text-align: center;
+}
+
+
+div#Options table {
+	/*border: 1px solid black;*/
+	padding-top: 80px;
+	width: 100%;
+	align: center;
+}
+
+
+
+div#Options td {
+	padding: 15px;
+	font-size: 150%;
+	font-weight: bold;
+	font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
+	text-align: center;
+}
+	
+div#Options a:link {
+	color: white;
+	text-decoration: none;
+}
+
+div#Options a:hover {
+	color : #4ED50D!important;
+	text-decoration : none; 
+}
+
+div#Options a:visited{
+	color : white;
+	text-decoration : none;
+}
+
+a:link {
+	color: #538cc6;
+	text-decoration: none;
+}
+
+a:hover {
+	color : #4ED50D!important;
+	text-decoration : none; 
+}
+
+a:visited{
+	color : #538cc6;
+	text-decoration : none;
+}
+
+input.Side_Bar_Button {
+	background-color: white;
+	color: blue;
+	width: wrap-content;
+	height: 30px;
+	border-radius: 5px;
+	margin: 20px;
+	float: left;
+}
+
+.Comment_Block{
+	position: relative;
 	float: right;
+		
+	width: 30%;
+	height: 100%;
+	border-left: 1px solid #538cc6;
+	margin: 0 auto;
+}
+
+.Comments{
+	position: absolute;
+	float: top;
+	padding: 10px;
+	width: 100%;
+	height: 79%;
+	background: white;
+	font-size: 12px;
+	overflow: auto;
+	padding: 3px;
+	
+}
+
+.Comment_User{
+	color: #538cc6;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+.Comment_Content{
+	font-size: 18px;
+}
+
+
+.Comment_Space{
+	border-top: 1px solid #538cc6;
+	padding: 2px;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	margin-bottom: 0px;
+	background: white;
+	
+}
+
+
+.Content{
+	position: fixed;
+	background: white;
+	width: 48%;
+	height: 100%;
+	float: left;
+	align: center;
+	margin-left: 21%;
+	margin-top: 10px;
+	
+}
+
+.ContentCover{
+	float: left;
+}
+
+.ContentText{
+	float:left;
+}
+
+.BackB{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	margin-left: 21%;
+	margin-bottom: 1%;
+}
+.RentB{
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	margin-right: 31%;
+}
+
+
+input.Button {
+    border : none !important;
+    background-color:#538cc6;
+    color: white;
+    width: 100px;
+    height: 35px;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;     
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;       
+      	
+}
+
+input.Button:hover  {
+	border : none !important;
+    background-color: #4ED50D;
+}
+
+input.Button2 {
+	border: 1px solid #bfbfbf;
+    background-color:white;
+    color: #bfbfbf;
+    width: 100px;
+    height: 35px;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;     
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+     	
+}
+
+input.Button2:hover {
+    background-color: #e6e6e6;
 }
